--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   confetti: ^0.8.0
   fl_chart: ^0.70.2
   shimmer: ^3.0.0
+  image_picker: ^1.1.2
+  google_ml_kit: ^0.19.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
