--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -41,6 +42,11 @@ dependencies:
   image_picker: ^1.1.2
   google_ml_kit: ^0.19.0
   provider: ^6.1.2
+  cloud_firestore: ^5.6.4
+  shared_preferences: ^2.5.2
+  firebase_auth: ^5.5.0
+  google_sign_in: ^6.2.2
+  tflite: ^1.1.2
 
 dev_dependencies:
   flutter_test:
