--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -20,12 +20,11 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId = "com.example.flutter_finance_management"
-        // You can update the following values to match your application needs.
-        // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
+        
+        // Explicitly set the minSdkVersion to 21 or 23 (depending on your requirement)
+        minSdk = 23 // Or 21 if you want to support older devices
+        targetSdk = 28 // Set it to the target SDK version you want to support
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
@@ -33,7 +32,6 @@ android {
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
             signingConfig = signingConfigs.debug
         }
     }
