--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   firebase_auth: ^5.5.0
   google_sign_in: ^6.2.2
   tflite: ^1.1.2
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
