--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   google_sign_in: ^6.2.2
   tflite: ^1.1.2
   google_fonts: ^6.1.0
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
