--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   tflite: ^1.1.2
   google_fonts: ^6.1.0
   http: ^1.3.0
+  flutter_local_notifications: ^14.0.0
 
 dev_dependencies:
   flutter_test:
