--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   tflite_flutter: ^0.11.0
   google_fonts: ^6.1.0
   http: ^1.3.0
+  dio: ^5.8.0+1
 
 dev_dependencies:
   flutter_test:
