--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   http: ^1.3.0
   dio: ^5.8.0+1
   intl: ^0.18.0
+  flutter_animate: ^4.5.0
+  animate_do: ^3.3.4
 
 dev_dependencies:
   flutter_test:
